added main elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>GitHub Lesson</title>
 </head>
 <body>
+  <header>Header</header>
+  <main>
+    <h1>Big fat title</h1>
+  </main>
+  
+  <footer></footer>
   
 </body>
 </html>
